--- a/Lesson4_ExpenseCalculator/styles.css
+++ b/Lesson4_ExpenseCalculator/styles.css
@@ -174,7 +174,7 @@ textarea {
   line-height: 200%;
   font-size: 20px;
   }
-  }
+  
 #inputinfo input {
   position: absolute;
   left: 600px;
@@ -187,7 +187,11 @@ textarea {
     line-height: 200%;
     font-size: 20px;
   }
-#shelterInput, #foodInput, #householdInput, #miscellaneousInput, #transportationInput {
+#shelterInput, 
+#foodInput, 
+#householdInput, 
+#miscellaneousInput, 
+#transportationInput {
   width: 5em;
   position: absolute;
   right: 80px;
